LAYOUT: fixed a minor misalignment of title-tag.

--- a/public/css/application.scss
+++ b/public/css/application.scss
@@ -54,7 +54,7 @@ body {
         background: $red;
         width: 220px;
         margin: -5px auto 10px auto; padding: 5px 0;
-        position: absolute; bottom:-5px; left: 25px;
+        position: absolute; bottom:-6px; left: 25px;
         color: white;
     }
     img {
